Fixed svg clipping

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,10 @@
-body,
-html {
-  height: 100%;
-}
-
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: auto;
   background-color: rgb(253, 236, 225);
+  min-height: 100vh;
   margin: 0;
 }
 
@@ -26,7 +22,8 @@ td {
 svg {
   pointer-events: none;
   position: absolute;
-  height: 100%;
+  overflow: visible;
+  min-height: 100vh;
   width: 100%;
 }
 
